removed bugs and simplified code

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <div id="dark"><button id="dark_button" onclick="dark_mode_event()">Dark Mode:</button></div>
         <div id="text">Calendar :
         </div>
+        <div id="complete_info">
+        </div>
         <div class="microphone">
             </div>
         <div id="calendar" >
